--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="products.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="manifest" href="petstore.webmanifest"> <!-- .json also works in place of .webmanifest-->
     <style>
         .product {
             border: 1px solid grey solid;
