--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
         }
     </style>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('serviceWorker.js');
+        };
+    </script>
 </head>
 
 <body>
